--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,7 +34,7 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: "github.com/kunitsuinc/ilog.go"
+    local-prefixes: "github.com/kunitsucom/ilog.go"
   wrapcheck:
     ignoreSigs:
       - func errors.New(text string) error
