--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -7,21 +7,10 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '.github/dependabot.yml'
-      - '.github/pull_request_template.md'
-      - '.github/release.yml'
-      - 'README.md'
+    # NO paths-ignore
   pull_request:
-    # branches:
-    #   - main
-    paths-ignore:
-      - '.github/dependabot.yml'
-      - '.github/pull_request_template.md'
-      - '.github/release.yml'
-      - 'README.md'
+    # NO paths-ignore
   workflow_dispatch:
-    inputs: {}
 
 # NOTE: 連続で commit ＆ push した時に最新の commit 以外のワークフローをキャンセルする
 concurrency:
@@ -40,8 +29,29 @@ defaults:
     shell: bash
 
 jobs:
-  go-test: # NOTE: for Branch protection rule `Status checks that are required.`
-    runs-on: ubuntu-latest # ref. https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+  paths-ignore:
+    runs-on: ubuntu-latest
+    outputs:
+      skip: ${{ steps.paths-ignore.outputs.skip }}
+    steps:
+      - uses: kunitsucom/github-actions-paths-ignore-alternative@v0.0.2
+        id: paths-ignore
+        with:
+          paths-ignore: |-
+            # substrings of file paths to ignore written in regular expressions
+            ^.github/dependabot.yml$
+            ^.github/pull_request_template.md$
+            ^.github/release.yml$
+            ^.github/workflows/label-checker.yml$
+            ^.github/workflows/task-list-checker.yml$
+            ^.*\.md$
+  # > Note: A job that is skipped will report its status as "Success".
+  # > It will not prevent a pull request from merging, even if it is a required check.
+  # ref. https://docs.github.com/en/actions/using-jobs/using-conditions-to-control-job-execution#overview
+  go-test:
+    runs-on: ubuntu-latest
+    needs: paths-ignore
+    if: ${{ needs.paths-ignore.outputs.skip != 'true' }}
     steps:
       - uses: actions/checkout@v4
       - name: DEBUG
